# algorithms

./: CMakeLists.txt  CMakePresets.json  GUI.ui  HACKING.md  README.md  mainwindow.cpp  opengl_widget.cpp  opengl_widget.h
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: arrays - hw1.cpp  lib.cpp  list_2  list_2.cpp  main  main.cpp  sorts_3  sorts_3.cpp
source/list, qeue, deck.dSYM/Contents/: Info.plist
source/list, qeue, deck.dSYM/Contents/Resources/DWARF/: list, qeue, deck
source/list, qeue, deck.dSYM/Contents/Resources/Relocations/aarch64/: list, qeue, deck.yml
source/list_2.dSYM/Contents/: Info.plist
source/list_2.dSYM/Contents/Resources/DWARF/: list_2
source/list_2.dSYM/Contents/Resources/Relocations/aarch64/: list_2.yml
source/main.dSYM/Contents/Resources/DWARF/: main
source/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
source/sorts_3.dSYM/Contents/: Info.plist
source/sorts_3.dSYM/Contents/Resources/DWARF/: sorts_3
source/sorts_3.dSYM/Contents/Resources/Relocations/aarch64/: sorts_3.yml
test/: CMakeLists.txt
test/source/: algorithms_test.cpp
